log/build_2021-09-13_22-47-19/JNode_KeyboardInput/stderr.log
  File "/home/spacecal/SpaceCal/install/JNode_KeyboardInput/lib/python3.8/site-packages/JNode_KeyboardInput/keyInputNode.py", line 18
    self.publisher_ = self.create_publisher(String, 'keyinput',10))
                                                                  ^
SyntaxError: unmatched ')'

